--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <div class="viewport">
       <!-- vue app container -->
       <div id="app">
+        <!-- chats app part -->
         <section class="app-chats">
+          <!-- user profile info section -->
           <header class="chats-header">
             <div class="chats-header-profile d-flex align-items-center">
               <figure class="img-rounded">
@@ -49,6 +51,7 @@
               <span class="d-block fs-5 ms-1">Sofia</span>
             </div>
 
+            <!-- user profile comands section -->
             <div class="chats-header-comands me-4">
               <i class="fa-solid fa-circle-notch ms-4"></i>
               <i class="fa-solid fa-message ms-4"></i>
@@ -56,6 +59,7 @@
             </div>
           </header>
 
+          <!-- chats notification section -->
           <div class="chats-notification py-3 px-4">
             <div class="img-rounded">
               <i class="fa-solid fa-bell-slash"></i>
@@ -66,6 +70,7 @@
             </div>
           </div>
 
+          <!-- chat research section -->
           <div class="chats-search p-2">
             <div class="input-group">
               <span class="input-group-text px-4" id="basic-addon1">
@@ -81,6 +86,7 @@
             </div>
           </div>
 
+          <!-- chats list section -->
           <div class="chats-container">
             <!-- chat -->
             <div class="chat">
@@ -96,8 +102,11 @@
           </div>
         </section>
 
+        <!-- active chat app part -->
         <section class="app-active">
+          <!-- active chat header -->
           <div class="active-chat-header">
+            <!-- active chat header title -->
             <div class="active-header-profile d-flex align-items-center">
               <figure class="img-rounded">
                 <img src="./img/avatar_1.jpg" alt="user profile" />
@@ -108,6 +117,7 @@
               </div>
             </div>
 
+            <!-- active chat header comands -->
             <div class="active-header-comands me-4">
               <i class="fa-solid fa-magnifying-glass ms-4"></i>
               <i class="fa-solid fa-paperclip ms-4"></i>
@@ -115,6 +125,7 @@
             </div>
           </div>
 
+          <!-- active chat section -->
           <div class="active-chat">
             <div class="message-sent">
               <span class="message-txt">Ciao come stai</span>
@@ -126,6 +137,7 @@
             </div>
           </div>
 
+          <!-- active chat footer -->
           <div class="active-comands">
             <i class="fa-regular fa-face-smile"></i>
             <input
