fix: change method on exit from chat creation menu button

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               v-show="newContactPressed"
               @keyUp.enter="addContactControl()"
             >
-              <div class="create-contact-close" @click="addContactControl()">
+              <div class="create-contact-close" @click="createContact()">
                 <i class="fa-solid fa-xmark"></i>
               </div>
               <label for="username" class="form-label">Username</label>
